[package]
name = "hulygun"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = "0.37.0"
tokio = { version = "1.44.2", features = ["full"] }
hulyrs = "0.1.0"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.10.0"
moka = { version = "0.12.10", features = ["future"] }
uuid = "1.16.0"
serde_json = "1.0.140"
backoff = "0.4.0"

[patch.crates-io]
hulyrs = { path = "../hulyrs" }
