[package]
name = "hulygun"
version = "0.1.1"
edition = "2024"

[dependencies]
rdkafka = { version = "0.37.0", features = [
    "cmake-build",
    "ssl-vendored",
    "tracing",
] }
tokio = { version = "1.44.2", features = ["full"] }
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "master" }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.10.0"
moka = { version = "0.12.10", features = ["future"] }
uuid = "1.16.0"
serde_json = "1.0.140"
backoff = "0.4.0"
base64 = "0.22.1"
http = "1.3.1"
