[package]
name = "hulygun"
version = "0.1.8"
edition = "2024"

[dependencies]
moka = { version = "0.12.10", features = ["future"] }
rdkafka = { version = "0.37.0", features = [
    "cmake-build",
    "ssl-vendored",
    "tracing",
] }
tokio = { version = "1.44.2", features = ["full"] }
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "master", features = [
    "kafka",
] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
serde_json = "1.0.140"
base64 = "0.22.1"
http = "1.3.1"
opentelemetry = "0.30.0"
opentelemetry-stdout = { version = "0.30.0" }
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tokio"] }
tracing-opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.30.1"
